PR/50859: David Binderman: Remove redundant code.